--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+
+
 h1 {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 40px;
@@ -49,12 +51,50 @@ a {
 }
 
 
+
+header {
+    background-color: #3F3F3F;
+    color: #C0C0C0;
+    padding: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header a {
+    color: #C0C0C0;
+}
+
+header form {
+    display: none;
+}
+
+
+@media(min-width: 768px) {
+    header {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 100px;
+    }
+
+    header nav ul {
+        display: flex;
+        gap: 12px;
+    }
+
+}
+
+
+
+@media (min-width: 1200px) {
     header {
         background-color: #3F3F3F;
         color: #C0C0C0;
         padding: 18px;
         display: flex;
         justify-content: space-between;
+        flex-direction: row;
         align-items: center;
         position: sticky;
         top: 0;
@@ -68,6 +108,7 @@ a {
     header a {
         color: #C0C0C0;
     }
+}
 
 
 .titulo-portada {
@@ -113,9 +154,11 @@ a {
     color: #DCDCDC;
     padding: 12px;
     text-align: center;
+
     border-radius: 24px;
-    margin-left: 90vh;
-    margin-right: 90vh;
+    width: 30%;
+    margin-left: 70vh;
+    margin-right: 70vh;
 }
 
 .biografia-documental {
