--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,9 +52,26 @@ a {
 
 
 
+/*estilos del header */
+
+
+.container{
+    background-color: #3F3F3F;
+    border-radius: 23px;
+}
+.navbar-brand{
+    font-family: "Bebas Neue", sans-serif;
+    color: #DCDCDC;
+    font-size: 30px;
+}
+
+.nav-link{
+    color:#DCDCDC;
+}
+
 header {
     background-color: #3F3F3F;
-    color: #C0C0C0;
+    color:#3F3F3F;
     padding: 2rem;
 
     display: flex;
@@ -69,6 +86,7 @@ header a {
 header form {
     display: none;
 }
+
 
 
 @media(min-width: 768px) {
@@ -111,10 +129,12 @@ header form {
 }
 
 
+/* estilos de la portada */
+
 .titulo-portada {
     background-color: #A90000;
-    width: 320px;
-    color: #DCDCDC;
+    width: fit-content;
+    color:#DCDCDC;
     padding: 12px;
     margin-bottom: 12px;
 }
@@ -139,9 +159,16 @@ header form {
     height: fit-content;
 }
 
+@media(max-width: 480px){
+    article{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
 
 
-
+/* estilos de b¿la sección biografía */
 
 .biografia-fondo {
     background-color: #3F3F3F;
@@ -209,6 +236,7 @@ header form {
 
 
 
+/* estilos de la sección novedades */
 
 .titulo-novedades {
     background-color: #A90000;
@@ -309,7 +337,7 @@ header form {
 
 
 
-
+/* estilos de la sección destacados */
 
 .titulo-destacados {
     background-color: #A90000;
@@ -387,6 +415,8 @@ header form {
 
 
 
+/* estilos de la sección contacto */
+
 
 .titulo-contacto {
     font-size: 30px;
@@ -399,62 +429,108 @@ header form {
 
 }
 
-.formulario-contenedor {
+.formulario-contenedor{
     background-color: #F8F4F4;
     display: flex;
     flex-direction: row;
-    height: 700px;
-    padding: 20px
+    justify-content: space-evenly;
 }
 
-.formulario-contenedor article,
-.formulario-contenedor img {
-    width: 50%;
+.formulario{
+    display: grid;
+    background-color:#C0C0C0;
+    width: 90%;
+    gap: 2rem;
+    max-width: 400px;
+    padding: 2rem;
+    border-radius: 10px;
+    text-align: center;
+    font-family: "Bebas Neue", sans-serif;
+    margin-left: 23px;
+    margin-right: 23px;
 }
 
-.formulario {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 500px;
-    padding-left: 40px;
-    padding-right: 40px;
+.formulario p{
+    font-family: "Bebas Neue", sans-serif;
     font-size: 30px;
-    background-color: #F8F4F4;
-    align-items: baseline;
 }
 
-.formulario input,
-.formulario label {
-    width: fit-content;
-    height: fit-content;
+.grupo-formulario{
+    position: relative;
 }
 
-
-.formulario id {
-    width: fit-content;
+.form-input{
+    width: 100%;
+    height: 40px;
+    font-size: 12px;
+    padding: 2rem;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 20px;
 }
 
-.formulario p {
-    font-size: 30px;
-    font-family: "Bebas Neue", sans-serif
+.textarea{
+    width: 100%;
+    height: 40px;
+    font-size: 20px;
 }
 
-.imagen-formulario {
+.imagen-contacto{
     display: flex;
-    flex-direction: column;
+    padding: 1rem;
     align-items: center;
-    width: 500px;
-    height: 100%
+    flex-direction: column;
 }
 
-.imagen-formulario img {
-    height: 500px;
-    width: 500px;
+.imagen-contacto img{
+    border-radius: 3px;
 }
 
-.caja-footer {
-    display: flex;
-    height: 300px;
-    background-color: #3F3F3F;
+
+/* responsive de las sección contacto */
+@media (max-width: 468px) {
+    .imagen-contacto img{
+        width: 100%;
+        height: fit-content;
+    }
+    
+}
+
+
+
+@media(max-width: 992px){
+    .formulario-contenedor{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .imagen-contacto{
+        width: 100%;
+        height: fit-content;
+    }
+}
+
+
+/* estilos del footer */
+.footer{
+    background-color: #505050;
+    margin-top: 50px;
+}
+
+@media(min-width: 468px){
+    .contenedor-footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media(min-width: 992px){
+    .contenedor-footer{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+    }
 }
