--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,653 +1,569 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-
 h1 {
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 40px;
-    font-size: 40px;
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 40px;
+  font-size: 40px;
 }
 
 h2 {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 25px;
-    font-weight: 5px;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 25px;
+  font-weight: 5px;
 }
 
 h3 {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 500;
-    font-weight: 500;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 500;
+  font-weight: 500;
 }
 
-
 section {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 500;
-    font-weight: 500;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 500;
+  font-weight: 500;
 }
 
 nav {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 25px;
-    font-weight: 40px;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 25px;
+  font-weight: 40px;
 }
-
-ul li {
-    list-style: none;
+nav ul li {
+  list-style: none;
+}
+nav p {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 500;
+}
+nav a {
+  text-decoration: none;
 }
 
 p {
-    font-family: "Roboto Condensed", sans-serif;
-    font-size: 500;
-}
-
-a {
-    text-decoration: none;
-}
-
-
-
-/*estilos del header */
-
-
-.container {
-    background-color: #3F3F3F;
-    border-radius: 12px;
-}
-
-.navbar-brand {
-    font-family: "Bebas Neue", sans-serif;
-    color: #DCDCDC;
-    font-size: 30px;
-}
-
-.nav-link {
-    color: #DCDCDC;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 header {
-    background-color: #3F3F3F;
-    color: #3F3F3F;
-    padding: 2rem;
+  background-color: #3F3F3F;
+  color: #3F3F3F;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+header form {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  header {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 100px;
+  }
+  header nav ul {
+    display: flex;
+    gap: 12px;
+  }
+}
+@media (min-width: 1200px) {
+  header {
+    background-color: #3F3F3F;
+    color: #C0C0C0;
+    padding: 18px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    position: sticky;
+    top: 0;
+  }
+  header nav ul {
+    display: flex;
+    gap: 24px;
+  }
+  header a {
+    color: #C0C0C0;
+  }
+}
+.container {
+  background-color: #3F3F3F;
+  border-radius: 12px;
+}
+
+.navbar-brand {
+  font-family: "Bebas Neue", sans-serif;
+  color: #DCDCDC;
+  font-size: 30px;
+}
+
+.nav-link {
+  color: #DCDCDC;
+}
+.nav-link:hover {
+  color: #A90000;
+}
+
+.footer {
+  background-color: #505050;
+  margin-top: 50px;
+}
+
+@media (min-width: 468px) {
+  .contenedor-footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+  }
 }
-
-
-
-header form {
-    display: none;
+@media (min-width: 992px) {
+  .contenedor-footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+  }
 }
-
-
-
-@media(min-width: 768px) {
-    header {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 100px;
-    }
-
-    header nav ul {
-        display: flex;
-        gap: 12px;
-    }
-
-}
-
-
-
-@media (min-width: 1200px) {
-    header {
-        background-color: #3F3F3F;
-        color: #C0C0C0;
-        padding: 18px;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-        align-items: center;
-        position: sticky;
-        top: 0;
-    }
-
-    header nav ul {
-        display: flex;
-        gap: 24px;
-    }
-
-    header a {
-        color: #C0C0C0;
-    }
-}
-
-
-/* estilos de la portada */
-
 .titulo-portada {
-    background-color: #A90000;
-    width: fit-content;
-    color: #DCDCDC;
-    padding: 12px;
-    margin-bottom: 12px;
+  background-color: #A90000;
+  width: fit-content;
+  color: #DCDCDC;
+  padding: 12px;
+  margin-bottom: 12px;
 }
 
 .introduccion {
-    padding: 10px;
-    width: 100%;
-    font-size: 20px;
-    margin-bottom: 100px;
+  padding: 10px;
+  width: 100%;
+  font-size: 20px;
+  margin-bottom: 100px;
 }
 
 .imagen-portada {
-    display: flex;
-    align-items: center;
-    margin-bottom: 12px;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+  justify-content: center;
 }
 
 .imagen-portada img {
-    width: 100%;
-    height: fit-content;
+  width: 100%;
+  height: fit-content;
 }
 
-@media(max-width: 480px) {
-    article {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
+@media (max-width: 480px) {
+  article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
-
-
-
-
 .titulo-biografia {
-    background-color: #A90000;
-    color: #DCDCDC;
-    padding: 12px;
-    text-align: center;
-    color: #DCDCDC;
-    padding: 12px;
-    border-radius: 12px;
-    margin-left: 20px;
-    margin-right: 20px;
+  background-color: #A90000;
+  color: #DCDCDC;
+  padding: 12px;
+  text-align: center;
+  color: #DCDCDC;
+  padding: 12px;
+  border-radius: 12px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .biografia-documental {
-    color: #DCDCDC;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  color: #DCDCDC;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .biografia-documental iframe {
-    width: 100%;
-    height: 500px;
+  width: 100%;
+  height: 500px;
 }
 
 .biografia {
-    background-color: #3F3F3F;
-    display: flex;
-    width: 100%;
-    padding: 12px;
-    flex-direction: column;
+  background-color: #3F3F3F;
+  display: flex;
+  width: 100%;
+  padding: 12px;
+  flex-direction: column;
 }
 
 .documental {
-    background-color: #787878;
+  background-color: #787878;
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  gap: 1rem;
+  width: 100%;
+}
+
+@media (max-width: 992px) {
+  .biografia-documental {
     display: flex;
     flex-direction: column;
-    padding: 12px;
-    gap: 1rem;
-    width: 100%;
+    justify-content: center;
+  }
+  .titulo-biografia {
+    margin-left: 0;
+    margin-right: 0;
+    border-radius: 0;
+  }
 }
-
-
-@media (max-width:992px) {
-    .biografia-documental {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .titulo-biografia {
-        margin-left: 0;
-        margin-right: 0;
-        border-radius: 0;
-    }
-}
-
-/* estilos de la sección novedades */
-
 .titulo-novedades {
-    background-color: #A90000;
-    color: #DCDCDC;
-    padding: 12px;
-    text-align: center;
-    color: #DCDCDC;
-    padding: 12px;
-    border-radius: 12px;
-    margin-left: 20px;
-    margin-right: 20px;
+  background-color: #A90000;
+  color: #DCDCDC;
+  text-align: center;
+  padding: 12px;
+  border-radius: 12px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .tapia-messi {
-    border-top: #3F3F3F 2px solid;
-    border-bottom: #3F3F3F 2px solid;
-    background-color: #787878;
-    display: flex;
-    padding: 12px;
-    margin-top: 12px;
-    margin-bottom: 12px;
-    color: white;
+  border-top: #3F3F3F 2px solid;
+  border-bottom: #3F3F3F 2px solid;
+  background-color: #787878;
+  display: flex;
+  padding: 12px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  color: white;
 }
 
 .tapia-messi h3 {
-    padding: 12px;
-    font-size: 30px;
-    height: fit-content;
+  padding: 12px;
+  font-size: 30px;
+  height: fit-content;
 }
 
 .tapia-messi p {
-    padding: 12px;
+  padding: 12px;
 }
 
 .tapia-messi img {
-    height: 300px;
-    border: #3F3F3F 2px solid;
+  height: 300px;
+  border: #3F3F3F 2px solid;
 }
 
-
 .tapia-subcampeon {
-    border-top: #3F3F3F 2px solid;
-    border-bottom: #3F3F3F 2px solid;
-    background-color: #F8F4F4;
-    display: flex;
-    padding: 12px;
-    margin-top: 12px;
-    margin-bottom: 12px;
-    color: #3F3F3F;
+  border-top: #3F3F3F 2px solid;
+  border-bottom: #3F3F3F 2px solid;
+  background-color: #F8F4F4;
+  display: flex;
+  padding: 12px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  color: #3F3F3F;
 }
 
 .tapia-subcampeon h3 {
-    padding: 12px;
-    font-size: 30px;
-    height: fit-content;
+  padding: 12px;
+  font-size: 30px;
+  height: fit-content;
 }
 
 .tapia-subcampeon p {
-    padding: 12px;
+  padding: 12px;
 }
 
 .tapia-subcampeon img {
-    height: 300px;
-    border: #3F3F3F 2px solid;
+  height: 300px;
+  border: #3F3F3F 2px solid;
 }
 
-
 .tapia-campeon {
-    border-top: #3F3F3F 2px solid;
-    border-bottom: #3F3F3F 2px solid;
-    background-color: #505050;
-    display: flex;
-    padding: 12px;
-    margin-top: 12px;
-    margin-bottom: 70px;
-    color: #F8F4F4;
+  border-top: #3F3F3F 2px solid;
+  border-bottom: #3F3F3F 2px solid;
+  background-color: #505050;
+  display: flex;
+  padding: 12px;
+  margin-top: 12px;
+  margin-bottom: 70px;
+  color: #F8F4F4;
 }
 
 .tapia-campeon h3 {
-    padding: 12px;
-    font-size: 30px;
-    height: fit-content;
+  padding: 12px;
+  font-size: 30px;
+  height: fit-content;
 }
 
 .tapia-campeon p {
-    padding: 12px;
+  padding: 12px;
 }
 
 .tapia-campeon img {
-    height: 300px;
-    border: #3F3F3F 2px solid;
+  height: 300px;
+  border: #3F3F3F 2px solid;
 }
 
-
-
-
-
-@media(max-width:768px) {
-    .tapia-messi {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .tapia-messi img {
-        width: 100%;
-        height: 100%;
-    }
-
-    .tapia-campeon {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .tapia-campeon img {
-        width: 100%;
-        height: 100%;
-    }
-
-    .tapia-subcampeon {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .tapia-subcampeon img {
-        width: 100%;
-        height: 100%;
-    }
+@media (max-width: 768px) {
+  .tapia-messi {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .tapia-messi img {
+    width: 100%;
+    height: 100%;
+  }
+  .tapia-campeon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .tapia-campeon img {
+    width: 100%;
+    height: 100%;
+  }
+  .tapia-subcampeon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .tapia-subcampeon img {
+    width: 100%;
+    height: 100%;
+  }
 }
-
-@media(max-width:992px) {
-    .titulo-novedades {
-        border-radius: 0;
-        margin-left: 0;
-        margin-right: 0;
-    }
+@media (max-width: 992px) {
+  .titulo-novedades {
+    border-radius: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
-
-
-
-
-
-/* estilos de la sección destacados */
-
 .titulo-destacados {
-    background-color: #A90000;
-    color: #DCDCDC;
-    padding: 12px;
-    text-align: center;
-    padding: 12px;
-    border-radius: 12px;
-    margin-left: 20px;
-    margin-right: 20px;
+  background-color: #A90000;
+  color: #DCDCDC;
+  padding: 12px;
+  text-align: center;
+  border-radius: 12px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .videos-destacados {
-    background-color: #F8F4F4;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-
+  background-color: #F8F4F4;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .videos-destacados div {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    gap: 12px;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 12px;
+  width: 100%;
+  height: 100%;
 }
 
 .videos-destacados iframe {
-    width: 100%;
-    height: 200px;
-    object-fit: contain;
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
 }
 
-
-
-
 .cancha-agus-tapia {
-    background-color: #3F3F3F;
-    color: #DCDCDC;
-    padding: 1rem;
+  background-color: #3F3F3F;
+  color: #DCDCDC;
+  padding: 1rem;
 }
 
 .cancha-agus-tapia img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .cancha-agus-tapia iframe {
-    width: 100%;
+  width: 100%;
 }
 
 .cancha-agus-tapia h3 {
-    text-align: center;
-    margin-top: 1rem;
+  text-align: center;
+  margin-top: 1rem;
 }
 
 .cancha-agus-tapia p {
-    text-align: center;
+  text-align: center;
 }
 
-
-
-
-@media(max-width:768px) {
-    .titulo-destacados {
-        border-radius: 0;
-        margin-left: 0;
-        margin-right: 0;
-    }
-
-    .videos-destacados {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .videos-destacados div {
-        display: flex;
-        flex-direction: column;
-        padding: 1rem;
-        gap: 1rem;
-    }
-
-    .videos-destacados iframe {
-        margin-top: 1rem;
-        height: 300px;
-        width: 100%;
-        object-fit: contain;
-    }
-
-    .cancha-agus-tapia {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 1rem;
-    }
+@media (max-width: 768px) {
+  .titulo-destacados {
+    border-radius: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .videos-destacados {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .videos-destacados div {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    gap: 1rem;
+  }
+  .videos-destacados iframe {
+    margin-top: 1rem;
+    height: 300px;
+    width: 100%;
+    object-fit: contain;
+  }
+  .cancha-agus-tapia {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem;
+  }
 }
-
-@media(min-width:1200px) {
-    .videos-destacados {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-    }
-
-    .videos-destacados iframe {
-        width: 100%;
-        height: 250px;
-        object-fit: contain;
-    }
-
-    .cancha-agus-tapia {
-        display: flex;
-        flex-direction: row;
-    }
-
-
-    .cancha-historia {
-        padding: 1rem;
-    }
-    .cancha-historia h3{
-        font-size: 40px;
-    }
-
-    .cancha-agus-tapia img {
-        height: 400px;
-        width: 400px;
-    }
-
-    .cancha-agus-tapia iframe {
-        width: 400px;
-        height: 400px ;
-    }
-}
-
-
-@media(min-width:1560px) {
-    .videos-destacados iframe {
-        width: 100%;
-        height: 300px;
-    }
-
-    .cancha-agus-tapia img{
-        width: 600px;
-        height: 500px;
-    }
-    .cancha-agus-tapia iframe{
-        width: 600px;
-        height: 500px;
-    }
-}
-
-
-
-
-
-/* estilos de la sección contacto*/
-
-.titulo-contacto {
-    background-color: #A90000;
-    color: #DCDCDC;
-    padding: 12px;
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    border-radius: 12px;
-}
-
-.formulario-contenedor {
-    background-color: #F8F4F4;
+@media (min-width: 1200px) {
+  .videos-destacados {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+  }
+  .videos-destacados iframe {
+    width: 100%;
+    height: 250px;
+    object-fit: contain;
+  }
+  .cancha-agus-tapia {
+    display: flex;
+    flex-direction: row;
+  }
+  .cancha-historia {
+    padding: 1rem;
+  }
+  .cancha-historia h3 {
+    font-size: 40px;
+  }
+  .cancha-agus-tapia img {
+    height: 400px;
+    width: 400px;
+  }
+  .cancha-agus-tapia iframe {
+    width: 400px;
+    height: 400px;
+  }
+}
+@media (min-width: 1560px) {
+  .videos-destacados iframe {
+    width: 100%;
+    height: 300px;
+  }
+  .cancha-agus-tapia img {
+    width: 600px;
+    height: 500px;
+  }
+  .cancha-agus-tapia iframe {
+    width: 600px;
+    height: 500px;
+  }
+}
+.titulo-contacto {
+  background-color: #A90000;
+  color: #DCDCDC;
+  padding: 12px;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 12px;
+}
+
+.formulario-contenedor {
+  background-color: #F8F4F4;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .formulario {
-    display: grid;
-    background-color: #C0C0C0;
-    width: 90%;
-    gap: 2rem;
-    max-width: 400px;
-    padding: 2rem;
-    border-radius: 10px;
-    text-align: center;
-    font-family: "Bebas Neue", sans-serif;
-    margin-left: 23px;
-    margin-right: 23px;
+  display: grid;
+  background-color: #C0C0C0;
+  width: 90%;
+  gap: 2rem;
+  max-width: 400px;
+  padding: 2rem;
+  border-radius: 10px;
+  text-align: center;
+  font-family: "Bebas Neue", sans-serif;
+  margin-left: 23px;
+  margin-right: 23px;
 }
 
 .formulario p {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 30px;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 30px;
 }
 
 .grupo-formulario {
-    position: relative;
+  position: relative;
 }
 
 .form-input {
-    width: 100%;
-    height: 40px;
-    font-size: 12px;
-    padding: 2rem;
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 20px;
+  width: 100%;
+  height: 40px;
+  font-size: 12px;
+  padding: 2rem;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 20px;
+}
+
+.boton-enviar:hover {
+  color: #DCDCDC;
+  background-color: #A90000;
 }
 
 .textarea {
-    width: 100%;
-    height: 40px;
-    font-size: 20px;
+  width: 100%;
+  height: 40px;
+  font-size: 20px;
 }
 
 .imagen-contacto {
-    display: flex;
-    padding: 1rem;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+  flex-direction: column;
 }
 
 .imagen-contacto img {
-    border-radius: 3px;
+  border-radius: 3px;
 }
 
-
-/* responsive de las sección contacto */
 @media (max-width: 468px) {
-    .imagen-contacto img {
-        width: 100%;
-        height: fit-content;
-    }
-
+  .imagen-contacto img {
+    width: 100%;
+    height: fit-content;
+  }
+}
+@media (max-width: 992px) {
+  .formulario-contenedor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .imagen-contacto {
+    width: 100%;
+    height: fit-content;
+  }
+  .titulo-contacto {
+    border-radius: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
-
-
-@media(max-width: 992px) {
-    .formulario-contenedor {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .imagen-contacto {
-        width: 100%;
-        height: fit-content;
-    }
-
-    .titulo-contacto {
-        border-radius: 0;
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
-
-
-/* estilos del footer */
-.footer {
-    background-color: #505050;
-    margin-top: 50px;
-}
-
-@media(min-width: 468px) {
-    .contenedor-footer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-}
-
-@media(min-width: 992px) {
-    .contenedor-footer {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-evenly;
-    }
-}
+/*# sourceMappingURL=style.css.map */
