--- a/SCSS/pages/_contacto.scss
+++ b/SCSS/pages/_contacto.scss
@@ -1,6 +1,7 @@
-
-
+//Estilos (animaciones incluidas)//
 .titulo-contacto {
+    -webkit-animation: tracking-in-expand-fwd-top 0.4s cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    animation: tracking-in-expand-fwd-top 0.4s cubic-bezier(0.215, 0.610, 0.355, 1.000);
     background-color: #A90000;
     color: #DCDCDC;
     padding: 12px;
@@ -56,8 +57,6 @@
     }
 }
 
-
-
 .textarea {
     width: 100%;
     height: 40px;
@@ -74,7 +73,7 @@
 .imagen-contacto img {
     border-radius: 3px;
 }
-
+//Estilos (animaciones incluidas)//
 
 //Responsive//
 @media (max-width: 468px) {
@@ -84,8 +83,6 @@
     }
 
 }
-
-
 
 @media(max-width: 992px) {
     .formulario-contenedor {
@@ -105,3 +102,4 @@
         margin-right: 0;
     }
 }
+//Responsive//
