--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,6 +48,34 @@ p {
   font-family: "Roboto Condensed", sans-serif;
 }
 
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes tracking-in-expand-fwd-top {
+  0% {
+    letter-spacing: -0.5em;
+    -webkit-transform: translateZ(-700px) translateY(-500px);
+    transform: translateZ(-700px) translateY(-500px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
 header {
   background-color: #3F3F3F;
   color: #3F3F3F;
@@ -131,19 +159,28 @@ header form {
     justify-content: space-evenly;
   }
 }
+.portada {
+  background-image: url(../img/tapia-portada-nueva.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  height: 1100px;
+  color: #F8F4F4;
+  padding-top: 1rem;
+}
+
 .titulo-portada {
   background-color: #A90000;
   width: fit-content;
   color: #DCDCDC;
   padding: 12px;
-  margin-bottom: 12px;
 }
 
 .introduccion {
+  background-color: rgba(0, 0, 0, 0.3);
   padding: 10px;
   width: 100%;
-  font-size: 20px;
-  margin-bottom: 100px;
+  font-size: 25px;
 }
 
 .imagen-portada {
@@ -158,6 +195,24 @@ header form {
   height: fit-content;
 }
 
+.animation-index {
+  -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.61, 0.355, 1) none;
+  animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.61, 0.355, 1) none;
+  background-color: #A90000;
+  width: fit-content;
+  color: #DCDCDC;
+  padding: 12px;
+}
+
+.animation-index-2 {
+  -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.61, 0.355, 1) none;
+  animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.61, 0.355, 1) none;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 10px;
+  width: 100%;
+  font-size: 25px;
+}
+
 @media (max-width: 480px) {
   article {
     display: flex;
@@ -166,6 +221,8 @@ header form {
   }
 }
 .titulo-biografia {
+  -webkit-animation: tracking-in-expand-fwd-top 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
+  animation: tracking-in-expand-fwd-top 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
   background-color: #A90000;
   color: #DCDCDC;
   padding: 12px;
@@ -219,6 +276,8 @@ header form {
   }
 }
 .titulo-novedades {
+  -webkit-animation: tracking-in-expand-fwd-top 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
+  animation: tracking-in-expand-fwd-top 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
   background-color: #A90000;
   color: #DCDCDC;
   text-align: center;
@@ -241,12 +300,13 @@ header form {
 
 .tapia-messi h3 {
   padding: 12px;
-  font-size: 30px;
+  font-size: 40px;
   height: fit-content;
 }
 
 .tapia-messi p {
   padding: 12px;
+  font-size: 18px;
 }
 
 .tapia-messi img {
@@ -267,12 +327,13 @@ header form {
 
 .tapia-subcampeon h3 {
   padding: 12px;
-  font-size: 30px;
+  font-size: 40px;
   height: fit-content;
 }
 
 .tapia-subcampeon p {
   padding: 12px;
+  font-size: 18px;
 }
 
 .tapia-subcampeon img {
@@ -293,12 +354,13 @@ header form {
 
 .tapia-campeon h3 {
   padding: 12px;
-  font-size: 30px;
+  font-size: 40px;
   height: fit-content;
 }
 
 .tapia-campeon p {
   padding: 12px;
+  font-size: 18px;
 }
 
 .tapia-campeon img {
@@ -343,6 +405,8 @@ header form {
   }
 }
 .titulo-destacados {
+  -webkit-animation: tracking-in-expand-fwd-top 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
+  animation: tracking-in-expand-fwd-top 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
   background-color: #A90000;
   color: #DCDCDC;
   padding: 12px;
@@ -473,6 +537,8 @@ header form {
   }
 }
 .titulo-contacto {
+  -webkit-animation: tracking-in-expand-fwd-top 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
+  animation: tracking-in-expand-fwd-top 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
   background-color: #A90000;
   color: #DCDCDC;
   padding: 12px;
