--- a/SCSS/_base.scss
+++ b/SCSS/_base.scss
@@ -1,10 +1,9 @@
+//Declaraciones generales//
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-
 
 h1 {
     font-family: "Bebas Neue", sans-serif;
@@ -50,10 +49,48 @@ nav {
     }
 }
 
-
 p {
     font-family: "Roboto Condensed", sans-serif;
 }
+//Declaraciones generales//
+
+//keyframes de animaciones//
+@keyframes tracking-in-expand {
+    0% {
+        letter-spacing: -0.5em;
+        opacity: 0;
+    }
+
+    40% {
+        opacity: 0.6;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes tracking-in-expand-fwd-top {
+    0% {
+        letter-spacing: -0.5em;
+        -webkit-transform: translateZ(-700px) translateY(-500px);
+        transform: translateZ(-700px) translateY(-500px);
+        opacity: 0;
+    }
+
+    40% {
+        opacity: 0.6;
+    }
+
+    100% {
+        -webkit-transform: translateZ(0) translateY(0);
+        transform: translateZ(0) translateY(0);
+        opacity: 1;
+    }
+}
+//keyframes de animaciones//
+
+//Declaraciones generales//
 
 //colores del sitio//
 $color-rojo: #A90000;
@@ -63,7 +100,7 @@ $color-fondo: #F8F4F4;
 $color-gris: #C0C0C0;
 //colores del sitio//
 
-
+//Mixins//
 @mixin flex-media ($direction: row, $justify: center) {
     display: flex;
     flex-direction: $direction;
@@ -75,3 +112,4 @@ $color-gris: #C0C0C0;
     justify-content: center;
     align-items: center;
 }
+//Mixins//
