--- a/SCSS/pages/_index.scss
+++ b/SCSS/pages/_index.scss
@@ -1,18 +1,26 @@
-
+//Estilos//
+.portada {
+    background-image: url(../img/tapia-portada-nueva.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    height: 1100px;
+    color: $color-fondo;
+    padding-top: 1rem;
+}
 
 .titulo-portada {
     background-color: #A90000;
     width: fit-content;
     color: #DCDCDC;
     padding: 12px;
-    margin-bottom: 12px;
 }
 
 .introduccion {
+    background-color: rgba($color: #000000, $alpha: 0.30);
     padding: 10px;
     width: 100%;
-    font-size: 20px;
-    margin-bottom: 100px;
+    font-size: 25px;
 }
 
 .imagen-portada {
@@ -26,8 +34,27 @@
     width: 100%;
     height: fit-content;
 }
+//Estilos//
 
+//Animaciones del index//
+.animation-index{
+    -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) none;
+    animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) none;
+    background-color: #A90000;
+    width: fit-content;
+    color: #DCDCDC;
+    padding: 12px;
+}
 
+.animation-index-2{
+    -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) none;
+    animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) none;
+    background-color: rgba($color: #000000, $alpha: 0.30);
+    padding: 10px;
+    width: 100%;
+    font-size: 25px;
+}
+//Animaciones del index//
 
 //Responsive//
 @media(max-width: 480px) {
@@ -37,3 +64,5 @@
         justify-content: center;
     }
 }
+
+//Responsive//
